--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -8,17 +8,18 @@
   <meta name="description" content="come and say hello to mickey">
   <meta name="owl" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="style.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <h1> hello there !! This is a website for talking to a AI Chatbot.</h1>
-     <p1> <form> <label for="input_text"> </form><br>
-          AI  :  <TEXTAREA Name="content" ROWS="6" COLS="50" id="AiResponse"></TEXTAREA><br>
-          you : <input type="text" id="text_input" value=""> </input>
-         <button onclick="MyFunction()" type="button"> click to send </button>
- </p1>
+  <p1><form><label for="input_text"></form><br>
+      AI  :  <TEXTAREA Name="content" ROWS="6" COLS="50" id="AiResponse"></TEXTAREA><br><br>
+      you : <input type="text" id="text_input" placeholder = "hello ai!"> </input>
+      <button onclick="MyFunction()" type="button" id = "send">click to send</button>
+  </p1>
 </body>
 <script>
 function MyFunction() {
