--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
 
   <title>A simple AI chatbot made for you to interact with it </title>
   <meta name="description" content="come and say hello to mickey">
   <meta name="owl" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  
 
 </head>
 
