--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="styles.css">
-
-  <title>A simple AI chatbot made for you to interact with it </title>
-  <meta name="description" content="come and say hello to mickey">
-  <meta name="owl" content="SitePoint">
-
-  
-
-</head>
-
+<!DOCTYPE html>
+<html>
 <body>
-  <h1> hello there !! This is a website for talking to a AI Chatbot.</h1>
-     <p1> <form> <label for="input_text"> </form><br>
-          AI  :  <TEXTAREA Name="content" ROWS="6" COLS="50" id="AiResponse"></TEXTAREA><br>
-          you : <input type="text" id="text_input" value=""> </input>
-         <button onclick="MyFunction()" type="button"> click to send </button>
- </p1>
+<h1>The embed element</h1>
+<iframe src="https://open.spotify.com/embed/playlist/6mh3u2FbdA9ExLhoFAWyP5" width="300" height="380" frameborder="0" allowtransparency="true" allo<html>
+<body>
+
+<h1>The embed element</h1>
+<iframe src="https://open.spotify.com/embed/playlist/6mh3u2FbdA9ExLhoFAWyP5" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
-<script>
-function MyFunction() {
-  var CText = document.getElementById("text_input").value
-  document.getElementById("AiResponse").value = "AI wants you to shut up and lemme make this website " + CText;
-}
-</script>
+</html>
+w="encrypted-media"></iframe>
+</body>
 </html>
